--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '366862151991038');
+fbq('init', '552844906145020');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=366862151991038&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=552844906145020&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 
@@ -65,7 +65,7 @@ src="https://www.facebook.com/tr?id=366862151991038&ev=PageView&noscript=1"
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/UeLe0dG" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
-                <span class="span-btn2">(Atenção: vagas limitadas!!!)</span>
+                <span class="span-btn2">(Atenção: Vagas Limitadas!!!)</span>
               </a>
             </div>
           </div>
